pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA =
pkgconfig_DATA += liblely-can.pc
pkgconfig_DATA += liblely-co.pc
pkgconfig_DATA += liblely-io.pc
pkgconfig_DATA += liblely-libc.pc
if !NO_RT
pkgconfig_DATA += liblely-libc_rt.pc
endif
pkgconfig_DATA += liblely-tap.pc
pkgconfig_DATA += liblely-util.pc
