pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA =
pkgconfig_DATA += liblely-can.pc
pkgconfig_DATA += liblely-co.pc
if !ECSS_COMPLIANCE
if !NO_CXX
pkgconfig_DATA += liblely-coapp.pc
endif
pkgconfig_DATA += liblely-ev.pc
pkgconfig_DATA += liblely-io.pc
pkgconfig_DATA += liblely-io2.pc
endif
pkgconfig_DATA += liblely-libc.pc
if !NO_RT
pkgconfig_DATA += liblely-libc_rt.pc
endif
pkgconfig_DATA += liblely-tap.pc
pkgconfig_DATA += liblely-util.pc
