SUBDIRS =
SUBDIRS += libc
if !ECSS_COMPLIANCE
SUBDIRS += tap
endif
SUBDIRS += util
SUBDIRS += can
SUBDIRS += co
if !NO_STDIO
if PLATFORM_LINUX
SUBDIRS += io
endif
if PLATFORM_WIN32
SUBDIRS += io
endif
endif # !NO_STDIO
if !ECSS_COMPLIANCE
SUBDIRS += ev
SUBDIRS += io2
if !NO_CXX
SUBDIRS += coapp
endif
endif # !ECSS_COMPLIANCE
